syntax = "proto3";

option csharp_namespace = "GRPC_Product_Service";

package products;

service Products {
  rpc GetProduct (ProductId) returns (Product);
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc InsertProduct (Product) returns (Empty);
  rpc UpdateProduct (Product) returns (Empty);
  rpc DeleteProduct (ProductId) returns (Empty);
}

message Empty {}

message Product {
	int32 ProductID = 1;
	string Name = 2;
	double Price = 3;
	int32 CategoryID = 4;
	int32 OnSale = 5;
	int32 StockLevel = 6;
}

message ProductList {
  repeated Product products = 1;
}

message ProductId {
	int32 id = 1;
}





